--- a/src/Q42.ImagePreview/Q42.ImagePreview.csproj
+++ b/src/Q42.ImagePreview/Q42.ImagePreview.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.246501">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 </Project>
