--- a/src/Q42.ImagePreview/Q42.ImagePreview.nuspec
+++ b/src/Q42.ImagePreview/Q42.ImagePreview.nuspec
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<package>
+<package >
   <metadata>
-    <id>Q42.ImagePreview</id>
-    <version>0.1.0</version>
-    <summary>Open source library for creating image previews.</summary>
+    <id>JDev.ImagePreview</id>
+    <version>0.2.0</version>
+    <title>ImagePreview</title>
+    <authors>Tim van Steenis, Q42 ; Jonas Suter</authors>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <license type="expression">MIT</license>
+    <projectUrl>https://github.com/JonasDev99/Q42.ImagePreview.Net</projectUrl>
     <description><![CDATA[Open source library for creating image previews.]]></description>
-    <authors>Tim van Steenis, Q42</authors>
-    <tags>image preview</tags>
-    <language>en-US</language> 
-    <projectUrl>https://github.com/Q42/Q42.ImagePreview.Net</projectUrl>
-    <iconUrl>https://nugetgallery.blob.core.windows.net/icons/DotLessMinification.0.42.1.png</iconUrl>
-    <frameworkAssemblies>
-      <frameworkAssembly assemblyName="System.Drawing"  />
-    </frameworkAssemblies>
+    <releaseNotes>Updated original image preview to .NET 5.0</releaseNotes>
+    <copyright>$copyright$</copyright>
+	<tags>image preview</tags>
+	<dependencies>
+		<group targetFramework=".NETStandard2.0">
+			<dependency id="Microsoft.CSharp" version="4.7.0" exclude="Build,Analyzers" />
+			<dependency id="System.Drawing.Common" version="5.0.2" exclude="Build,Analyzers" />
+			<dependency id="System.Data.DataSetExtensions" version="4.5.0" exclude="Build,Analyzers" />
+			<dependency id="NETStandard.Library" version="2.0.3" exclude="Build,Analyzers" />
+		</group>
+    </dependencies>
   </metadata>
 </package>
-
